[GF] Update to nib file, set textfield delegates

--- a/DropDownView/DropDownView.xib
+++ b/DropDownView/DropDownView.xib
@@ -314,7 +314,6 @@
 						<string key="NSFrame">{{0, 132}, {320, 1}}</string>
 						<reference key="NSSuperview" ref="431764280"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="1071765079"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -406,6 +405,30 @@
 						<reference key="destination" ref="431764280"/>
 					</object>
 					<int key="connectionID">779</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="360928555"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">780</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="501322890"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">782</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="840482530"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">781</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -569,7 +592,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">779</int>
+			<int key="maxID">782</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
